--- a/prepare_mask.ipynb
+++ b/prepare_mask.ipynb
@@ -13,6 +13,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sncaip_folder = '/home/hcleroy/PostDoc/Colab_David/ExperimentalData/Processed_Cell_Crops/Synphillin_Channel/'\n",
+    "sncaip_names = [sncaip_folder+'Cell'+str(i)+'_ROI'+str(i)+'_SNCAIP.tif' for i in range(1,11)]\n",
+    "sncaip =  [tf.imread(name) for name in sncaip_names]\n",
+    "for i,stack in enumerate(sncaip):\n",
+    "       np.save(sncaip_folder+'masks4D_'+str(i)+'.npy',sncaip[i],allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -158,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.undefined"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
