actually change the input data

--- a/prepare_mask.ipynb
+++ b/prepare_mask.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f59bd1da790>"
+       "<matplotlib.image.AxesImage at 0x7f1c010bf550>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,13 +145,51 @@
        "(30, 134, 134, 4)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "categorical_imgs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conver_class_to_label(image):\n",
+    "        # Use np.argmax to get the index of the max value in the one-hot encoded vector for each pixel\n",
+    "    class_labels = np.argmax(image, axis=-1)\n",
+    "    \n",
+    "    # Add a new axis to match the desired output shape (resolution, resolution, 1)\n",
+    "    class_labels = class_labels[..., np.newaxis]\n",
+    "    \n",
+    "    return class_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs_labels  = [np.zeros((stack.shape[0],stack.shape[1],stack.shape[2],1),dtype=np.float32) for stack in cell_img]\n",
+    "for i in range(len(full_labeled_data)):\n",
+    "    for j in range(full_labeled_data[i].shape[0]):\n",
+    "        imgs_labels[i][j] = conver_class_to_label(categorical_imgs[i][j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,stack in enumerate(imgs_labels):\n",
+    "       np.save('masks1D_'+str(i)+'.npy',stack,allow_pickle=True)"
    ]
   }
  ],
