remove data enhancement, reduce dropout, increase batch_size, reduce validation_split, 100epochs, with earlystopping callback.

--- a/prepare_mask.ipynb
+++ b/prepare_mask.ipynb
@@ -124,6 +124,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[255 255 255 ... 255 255 255]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mask_mono[10][np.where(mask_mono[10]!=0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
